--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Task for setting up a basic node server",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon src/index.ts"
   },
   "author": "Lars G",
   "license": "ISC",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.15",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
 }
