--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,22 @@
 /* Visit https://aka.ms/tsconfig to read more about this file */
 {
   "compilerOptions": {
-    /* Projects */
-    // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
-    // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
-    // "tsBuildInfoFile": "./.tsbuildinfo",              /* Specify the path to .tsbuildinfo incremental compilation file. */
-    // "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects. */
-    // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
-    // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
-
     /* Language and Environment */
     "target": "ESNext",
     "lib": ["ES6"],
 
     /* Modules */
     "module": "commonjs",
-    "rootDir": "./src",
-    "moduleResolution": "node",
+    "rootDir": "src",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
-
-    /* JavaScript Support */
-    "allowJs": true,
-    "checkJs": true,
 
     /* Emit */
     "declaration": true,
     "declarationMap": true,
-    "outDir": "./release",
+    "outDir": "release",
     "stripInternal": true,
-    "declarationDir": "./@types",
+    "declarationDir": "@types",
 
     /* Interop Constraints */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
@@ -38,10 +26,16 @@
     "strict": true,
     "noImplicitAny": true,
     "alwaysStrict": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitThis": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
 
     /* Completeness */
     "skipLibCheck": true
-  }
+  },
+  "files": [
+    "./node_modules/@types/node/index.d.ts"
+  ]
 }
