--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Task for setting up a basic node server",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "postdev": "rm -rf src/logs"
   },
   "author": "Lars G",
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.29.2",
-    "node": "^18.8.0"
+    "node": "^18.7.15",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.15",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
